@@ -19,7 +19,7 @@ LIB_DEPENDS=	libcurl.so:ftp/curl \
 		libxslt.so:textproc/libxslt
 
 USE_LDCONFIG=	yes
-USES=		libtool gmake pkgconfig compiler:c++11-lang
+USES=		libtool gmake pkgconfig compiler:c++11-lang ssl
 GNU_CONFIGURE=	yes
 CONFIGURE_ENV=	"OPENSSL_CFLAGS=${CFLAGS} -l${OPENSSLINC}" \
 		OPENSSL_LIBS=-L${OPENSSLLIB}
@@ -27,12 +27,7 @@ CPPFLAGS+=	-I${LOCALBASE}/include
 CFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
 
-# This port needs OpenSSL 0.9.8b which is present in 7.0 and up
-USE_OPENSSL=	yes
-
 .include <bsd.port.pre.mk>
-
-.include "${PORTSDIR}/Mk/bsd.openssl.mk"
 
 # If we use the base OpenSSL either by default or
 # by design, we need to remove the openssl dependency
