@@ -108,10 +108,9 @@ PLIST_SUB+=	LDAP="@comment "
 .endif
 
 .if ${PORT_OPTIONS:MLDAP_SSL} && ${PORT_OPTIONS:MLDAP}
-USE_OPENSSL=	yes
+USES+=		ssl
 CONFIGURE_ARGS+=--with-ldapcrypto
 LIBS+=		-lssl
-.include "${PORTSDIR}/Mk/bsd.openssl.mk"
 .endif
 
 .if ${PORT_OPTIONS:MIPV6}
